--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concat": "^1.0.3",
     "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0"
   }
 }
